clusters/hetzner/apps/monitoring/prometheus/app/ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - prometheus.infra.behn.dev
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
